1999-01-28  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtk-doc.dsl.in: I forgot to make the new refentry code process the
	child elements, so it was only outputting anchors for each page.

	* doc/setting-up.txt (scan): added step to create MODULE.types file
	for modules which contain widgets (or objects).

	* gtkdoc-mkdb (OutputStruct): allow spaces inside the public/private
	markers, e.g. "/*  <  public  >  */"

1999-01-27  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* Makefile.am: added scripts to EXTRA_DIST and copied examples, doc
	and db2man dirs in dist-hook.

	* doc/sections-file.txt: added a couple of examples.

	* doc/setting-up.txt: new document describing how to set up a module
	to use gtk-doc.

	* doc/README: added description of setting-up.txt

	* README: added short 'Installation' section describing the
	--with-dsssl-dir option.

	* gtk-doc.dsl.in: also output links to each RefEntry page in the
	index.sgml file, so libgnomeui docs can link to widgets. (The widget
	hierarchy links were not working before.)

1999-01-26  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-scan (ScanHeader): parse function declarations that have the
	return type and name on one line, and the '(' and args on the next.
	NOTE: functions with the start of the declaration split over 3 lines
	will not be parsed (e.g. return type on one line, function name on
	next, and '(' and first argument on the third.) I hope there aren't
	any.

	* gtkdoc-mkdb (OutputStruct): Use a different SGML ID for widget
	structs, since the original ID is used for the entire RefEntry.
	Also only show parts of widget structs which are marked with a
	comment '/*<public>*/'. Use '/*<private>*/' for private fields.

	* gtkdoc-mktmpl (UpdateTemplates): We include widget structs now,
	so we do want warnings if they aren't used.

	* examples/gnomeui/gnomeui-docs.sgml: 
	* examples/gnomeui/gnomeui-sections.txt:
	* examples/gnomeui/gnomeui.types:
	* examples/gnome/gnome-docs.sgml: 