@@ -1,5 +1,17 @@
 .cvsignore
 gtk-doc.dsl
+gtkdoc-fixxref
+gtkdoc-mkdb
 gtkdoc-mkhtml
 gtkdoc-mkman
+gtkdoc-mktmpl
+gtkdoc-scan
+gtkdoc-scanobj
 config.h.in
+Makefile.in
+Makefile
+aclocal.m4
+configure
+config.log
+config.status
+config.cache
